@@ -1,0 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<rules lang="fr">
+    <rule id="LanguageTool" name="immunize the word 'languageTool'">
+        <pattern>
+            <token>languageTool</token>
+            <disambig action="immunize"/>
+        </pattern>
+    </rule>
+</rules>
