@@ -43,6 +43,9 @@ LanguageTool Change Log
 -added common punctuation and mathematical characters (=#*∗×·+÷) to the 
  set of tokenizing characters in most languages
 
+-spell checking: Immunized tokens are now ignored and
+   don't cause a spelling error anymore
+
 -API:
     -deprecated Rule.isSpellingRule(), please use Rule.isDictionaryBasedSpellingRule()
      instead
